<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/loginMainLayout"
    android:orientation="vertical"
    android:background="@drawable/main_bg"
    android:gravity="center_horizontal"

    >

    <com.khemsharma.yourdoctor.AppUttils.CustomTextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YourDoctor"
        android:textStyle="italic"
        android:textSize="40sp"
        android:layout_marginTop="@dimen/default_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_gap"
        android:background="@color/white"
        tools:context=".LoginActivity"
        tools:layout_editor_absoluteY="81dp"

        >


        <com.khemsharma.yourdoctor.AppUttils.CustomTextView
            android:id="@+id/customTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="42dp"
            android:layout_marginBottom="29dp"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customTextView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"


                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginWithBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <com.khemsharma.yourdoctor.AppUttils.CustomTextView
            android:id="@+id/customTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="8dp"
            android:text="Or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />


        <Button
            android:id="@+id/loginWithBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="9dp"
            android:background="@color/colorPrimary"
            android:text="Login With Provider"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/customTextView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <com.khemsharma.yourdoctor.AppUttils.CustomTextView
            android:id="@+id/customTextView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"


            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/not_user"
            app:layout_constraintBottom_toTopOf="@+id/registerNowBtn"
            app:layout_constraintEnd_toEndOf="@+id/registerNowBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginWithBtn" />

        <Button
            android:id="@+id/registerNowBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customTextView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>